minimal-height for postContent to prevent timestamp truncating

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -142,7 +142,7 @@ article div.postContent {
    max-width: 900px;
    margin: 0 auto;
    padding: 1em;
-   padding: 20px 20px;
+   min-height: 180px;
 }
 
 article h1.postHeader{
